# ai-labor-exposure

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  analyze_bls.py  classified_tasks_batch1.csv  classify_tasks.py  download_bls.js  download_bls.py  download_data.py  eloundou_exposure.csv  generate_plots.py  main.py  onet_tasks.csv  package-lock.json  package.json  plot_constants.py  pyproject.toml  synthesize_dynamic.py  synthesize_impacts.py  test_models.py  validate_bls.py
.claude/: settings.json
.github/workflows/: release.yml
docs/: framework.md  model_vs_observed_exposure.md
docs/charts/: anthropic_observed_sector_level_employment_validation.md  anthropic_observed_sector_level_wage_validation.md  cps_2026_direction.md  cps_model_vs_actual.md  dynamic_model_growth_validation.md  dynamic_model_net_change_distribution.md  dynamic_model_winners_losers.md  dynamic_sector_level_employment_validation.md  dynamic_sector_level_validation.md  dynamic_sector_level_wage_validation.md  dynamic_vs_rebound_model_comparison.md  eloundou_sector_level_employment_validation.md  eloundou_sector_level_wage_validation.md  employment_vs_wage_growth_by_demand_type.md  high_exposure_concentration.md  high_risk_concentration.md  model_signal_over_time.md  model_signal_over_time_occupation.md  model_vs_naive_divergence.md  observed_ai_usage_vs_model_impact.md  observed_vs_rebound_adjusted_exposure.md  prior_exposure_vs_model_impact.md  sector_adjusted_growth.md  sector_level_employment_validation.md  (+3 more)
tests/: test_models.py  test_pipeline.py
